--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -1,33 +1,38 @@
-<div class="container">
-<div class="row">
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <td>Sr.No.</td>
-      <td>First Name</td>
-      <td>Last Name</td>
-      <td>Mobile</td>
-      <td>Address</td>
-      <td width=275 align="center">Action</td>
-    </tr>
-  </thead>
-  <tbody>
-     <tr *ngFor="let customer of customers; let i = index;">
-       <td>{{ i+1 }}</td>
-        <td>{{customer.first_name}}</td>
-        <td>{{customer.last_name}}</td>
-        <td>{{customer.mobile}}</td>
-        <td>{{customer.address}}</td>
-        <td width=275> 
-          <button type="button" class="btn btn-success" (click)="getNavigation('view',customer.user_id)">View</button>
-          <button type="button" class="btn btn-warning" (click)="getNavigation('update',customer.user_id)">Edit</button>
-          <button type="button" class="btn btn-danger">Delete</button>
-        </td>
-     </tr>
-    
-  </tbody>
- 
-</table>
-</div>
+<table mat-table [dataSource]="customers" class="mat-elevation-z8">
 
-</div>
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- user_id Column -->
+  <ng-container matColumnDef="user_id">
+    <th mat-header-cell *matHeaderCellDef> Sr.No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.user_id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="first_name">
+    <th mat-header-cell *matHeaderCellDef> First Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+  </ng-container>
+
+  <!-- last_name Column -->
+  <ng-container matColumnDef="last_name">
+    <th mat-header-cell *matHeaderCellDef> Last Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
+  </ng-container>
+
+  <!-- mobile Column -->
+  <ng-container matColumnDef="mobile">
+    <th mat-header-cell *matHeaderCellDef> Mobile </th>
+    <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+  </ng-container>
+
+  <!-- address Column -->
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef> Address </th>
+    <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
