Added material but unsuccessful

--- a/src/app/pages/customer-info/customer-info.component.html
+++ b/src/app/pages/customer-info/customer-info.component.html
@@ -1,9 +1,13 @@
 <div class="new-customer-container">
     <form class="example-form">
       <mat-form-field class="example-full-width">
-        <input required matInput placeholder="वापरकर्त्याचे नाव">
+        <input required matInput placeholder="First Name">
       </mat-form-field>
-  
+      
+      <mat-form-field class="example-full-width">
+        <input required matInput placeholder="Last Name">
+      </mat-form-field>
+
       <mat-form-field class="example-full-width">
         <input type="tel" matInput placeholder="पत्ता">
       </mat-form-field>
