--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -9,7 +9,7 @@
   <!-- user_id Column -->
   <ng-container matColumnDef="user_id">
     <th mat-header-cell *matHeaderCellDef> Sr.No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.user_id}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.customer_id}} </td>
   </ng-container>
 
   <!-- Name Column -->
