--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -7,7 +7,7 @@
 <table mat-table [dataSource]="customers" class="mat-elevation-z8">
 
   <!-- user_id Column -->
-  <ng-container matColumnDef="user_id">
+  <ng-container matColumnDef="customer_id">
     <th mat-header-cell *matHeaderCellDef> Sr.No. </th>
     <td mat-cell *matCellDef="let element"> {{element.customer_id}} </td>
   </ng-container>
@@ -33,7 +33,7 @@
   <ng-container matColumnDef="details">
       <th mat-header-cell *matHeaderCellDef> Details </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="primary" (click)="redirectToDetails(element.id)">
+        <button type="submit" mat-icon-button color="primary" (click)="redirectToDetails(element.customer_id)">
         <mat-icon class="mat-18">reorder</mat-icon>
         </button>
       </td>
@@ -42,7 +42,7 @@
   <ng-container matColumnDef="update">
     <th mat-header-cell *matHeaderCellDef> Update </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button color="accent" (click)="redirectToUpdate(element.user_id)"><mat-icon class="mat-18"> system_update </mat-icon>
+      <button type="submit" mat-icon-button color="accent" (click)="redirectToUpdate(element.customer_id)"><mat-icon class="mat-18"> system_update </mat-icon>
       </button> 
     </td>
   </ng-container>
@@ -50,7 +50,7 @@
   <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button color="warn" (click)="redirectToDelete(element.user_id)"><mat-icon class="mat-18">delete</mat-icon>
+        <button type="submit" mat-icon-button color="warn" (click)="redirectToDelete(element.customer_id)"><mat-icon class="mat-18">delete</mat-icon>
         </button>     
       </td>
     </ng-container>
