--- a/src/app/pages/tehsil-form/tehsil-form.component.html
+++ b/src/app/pages/tehsil-form/tehsil-form.component.html
@@ -1,20 +1,19 @@
 <div class="new-customer-container">
-    <form class="example-form">
+    <form class="example-form" [formGroup]="talukaForm" 
+    (ngSubmit)="saveTaluka(talukaForm.value)">
         <h4>जिल्हा</h4>
         <mat-form-field>
-          <mat-select>
+          <mat-select name="district_id">
             <mat-option>None</mat-option>
-            <mat-option value="option1">Option 1</mat-option>
-            <mat-option value="option2">Option 2</mat-option>
-            <mat-option value="option3">Option 3</mat-option>
+            <mat-option *ngFor="let district of districts" value="district.id">{{district.name}}</mat-option>
           </mat-select>
         </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input required matInput placeholder="तालुका">
+        <input required matInput formControlName="talukaName" placeholder="तालुका">
       </mat-form-field>
   
-      <button mat-fab><mat-icon>trending_flat</mat-icon></button>
+      <button type="submit" mat-fab><mat-icon>trending_flat</mat-icon></button>
       <button mat-fab class="clear-left"><mat-icon>cached</mat-icon></button>
     </form>
   </div>
