--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,6 +8,6 @@
       <input type="password" matInput placeholder="पासवर्ड">
     </mat-form-field>
 
-    <button mat-fab (click)="login()"><mat-icon>trending_flat</mat-icon></button>
+    <button mat-fab><mat-icon>trending_flat</mat-icon></button>
   </form>
 </div>
