--- a/src/app/pages/new-semen-list/new-semen-list.component.html
+++ b/src/app/pages/new-semen-list/new-semen-list.component.html
@@ -10,6 +10,10 @@
       <input type="number" matInput placeholder="सुरुवातीची किंमत" formControlName="initialPrice" required>
     </mat-form-field>   
 
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="माहिती" formControlName="description" required>
+    </mat-form-field>
+
     <button mat-fab type="submit"><mat-icon>trending_flat</mat-icon></button>
     <button mat-fab class="clear-left"><mat-icon>cached</mat-icon></button>
     <br><br>  
