--- a/src/app/pages/visiting-info/visiting-info.component.sass
+++ b/src/app/pages/visiting-info/visiting-info.component.sass
@@ -1,5 +1,4 @@
 .example-form 
-  min-width: 150px;
   max-width: 500px;
   width: 100%;
   height: auto;
@@ -12,6 +11,20 @@
   height: auto;
   justify-content: center;
   align-items: center;
+  margin-top: 15px;
+  width: auto;
 
 .clear-left
     margin-left: 3em;
+
+h5
+  width: 200px;
+  display: inline;
+  margin-right: 20px;
+
+  
+
+
+    
+
+     
