--- a/src/app/pages/reports/reports.component.sass
+++ b/src/app/pages/reports/reports.component.sass
@@ -1,6 +1,6 @@
 .report-container
   display: block;
-  height: 90%;
+  height: 30%;
   justify-content: center;
   align-items: center; 
 
@@ -63,11 +63,23 @@
   justify-content: center;
   align-items: center;
 
-
-
-  
-
-
 .animalType
   margin-right: 20px;
+
+.visitreport1 
+  height: 400px;
+  overflow: auto;
+
+
+table 
+  width: 100%;
+  margin-left: 5em;
+
+.mat-header-row
+  font-size: 10px;
+  font-weight: bold;
+
+
+
+
   
